// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Left 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH isAFZs"
    data-js-slick="left"
    onClick={[Function]}
  >
    <img
      alt="left"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Right 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH jGUSLb"
    data-js-slick="right"
    onClick={[Function]}
  >
    <img
      alt="right"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselDot Show Tweet Button 1`] = `
<div
  className="sc-ifAKCX hprZSf"
>
  <div
    className="sc-bxivhb gGDodJ"
  />
</div>
`;

exports[`Storyshots TwApps/atoms/ShowTweetButton Show Tweet Button 1`] = `
<button
  className="sc-jAaTju ikXDTW"
  onClick={[Function]}
  type="button"
>
  <div
    className="sc-jDwBTQ fSAsSb"
  />
  <span
    className="sc-jTzLTM izpxaH"
  >
    ツイートを
  </span>
  チラ見
</button>
`;

exports[`Storyshots TwApps/atoms/ToggleMenuButton Toggle Mute Button 1`] = `
<div
  className="sc-kAzzGY jMjvEQ"
>
  <div
    className="sc-fjdhpX dKWwgc"
  >
    <button
      className="sc-cSHVUG bhxyBA"
      onClick={[Function]}
    >
      <img
        alt="close"
        className="sc-jzJRlG ikrnlm menu-toggle-icon"
        src="[object Object]"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/Tweet Tweet 1`] = `
<div
  className="sc-chPdSV RZrGb"
>
  <p
    className="sc-kgoBCf eKLFlP"
  >
    ツイートの本文が表示されます
  </p>
  <ul
    className="sc-kGXeez fxkIlE"
  />
  <div
    className="sc-ckVGcZ bBDcYB"
  >
    <div
      className="sc-jKJlTe dPCXzM"
    >
      <div
        className="sc-hMqMXs bzaPGE"
      />
      <p
        className="sc-kEYyzF gplWHF"
      >
        10
      </p>
    </div>
    <div
      className="sc-jKJlTe dPCXzM"
    >
      <div
        className="sc-eNQAEJ gDkQlq"
      />
      <p
        className="sc-kkGfuU bMdBUi"
      >
        11
      </p>
    </div>
    <a
      className="sc-iAyFgw kHuthd open-twitter-link"
      href="https://twitter.com/cha_han5656"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="sc-hSdWYo eHhjMN twitter-icon"
      />
      <span
        className="sc-eHgmQL ikwqBM pc-twitter-label"
      >
        twitterで見る
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/UnmuteButton Mobile 1`] = `
Array [
  <h2>
    PCサイズでは何も表示されない
  </h2>,
  <button
    className="sc-csuQGl loFxpu"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-gipzik bVdXAw unmute-icon"
    />
    ミュート解除
  </button>,
]
`;

exports[`Storyshots TwApps/atoms/UnmuteButton PC 1`] = `
Array [
  <h2>
    SPサイズでは何も表示されない
  </h2>,
  <button
    className="sc-jlyJG giQEqx"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-gPEVay fgngZX mute-icon"
    />
    ミュート
  </button>,
]
`;

exports[`Storyshots TwApps/molecules/FatalMessage Fatal Message 1`] = `
<div
  className="sc-cvbbAY jigcOE"
>
  <div
    className="sc-jWBwVP docuPj"
  >
    <h2
      className="sc-brqgnP djSacn"
    >
      エラーが発生しました
    </h2>
    <a
      className="sc-cMljjf dTRkEh"
      href="http://localhost:6006"
    >
      Topへ戻る
    </a>
  </div>
</div>
`;
